# stocksToYT

./: README.md  pyproject.toml
stockstoyt/: __init__.py  constants.py  pyTubeChannels.py  web_screenshot.py
yf/: yfinance.cache
yf/cache/: cookies.db
