[tool.poetry]
name = "stockstoyt"
version = "0.1.0"
description = ""
authors = ["benny-sit <108618452+benny-sit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"
yfinance = "^0.2.41"
requests-ratelimiter = "^0.7.0"
requests-cache = "^1.2.1"
selenium = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
